--- a/Experiment/connexion/css/style.css
+++ b/Experiment/connexion/css/style.css
@@ -7,44 +7,12 @@ background-color:white;
 font-family: Gotham Rounded;
 }
 
-/*Largeur de la fenetre*/
-@media only screen and (max-width:800px) {
- body {
- 	 font-size:90%;
- background-color:white;
- color:black;
- }
-  label
-{
-	margin:0;
-	display: block;
-	width: 180px;
-	float: left;
-}
-}
-
-/*Largeur de l'écran*/
-@media only screen and (max-device-width:480px) {
- body {
- font-size:150%;
- background-color:white;
- color:black;
- }
-  label
-{
-	margin:0;
-	display: block;
-	width: 180px;
-	float: left;
-}
-}
-
 label
 {
-	margin:0;
-	display: block;
-	width: 180px;
-	float: left;
+  margin:0;
+  display: block;
+  width: 180px;
+  float: left;
 
 }
 
@@ -98,7 +66,7 @@ color:#394147;
 
 #hover
 {
-	/*margin-left: 50%;*/
+  /*margin-left: 50%;*/
     position: absolute;
     margin-left: 40%;
     width: 180px;
@@ -107,7 +75,7 @@ color:#394147;
 
 #co
 {
-	margin-left:93%;
+  margin-left:93%;
 }
 
 #ins
@@ -134,6 +102,126 @@ width: 60px;
 h1{
 color: #F26e27;
 }
+/*Largeur de la fenetre*/
+/*@media only screen and (max-width:800px) {
+
+}
+*/
+/*Largeur de l'écran*/
+@media only screen and (max-device-width:800px) {
+  
+  html, body {
+    margin:0;
+    padding:0;
+    font-size:50%;
+    color:black;
+    background-color:white;
+    font-family: Gotham Rounded;
+  }
+
+  label
+  {
+    margin:0;
+    display: block;
+    width: 90px;
+    float: left;
+  }
+
+  /*Menu*/
+  header
+  {
+    background: #28282e;
+    height:120px;
+    width: 50%;
+  }
+
+  #menu_header 
+  {
+    font-family: Gotham Rounded;
+    text-align: center;
+    position:absolute;
+    top:95px;
+    font-size:7.5px;
+    color:white;
+    text-transform:uppercase;
+    padding:auto;
+    width:50%;
+    background:#F26e27;
+  }
+ 
+  #head
+  {
+    padding:2.5px;
+    border-radius:2px;
+  }
+ 
+  .h
+  {
+    display:inline;
+    padding:0 7px 0 0;
+    margin:0 7px 0 0;
+  }
+ 
+  .h:last-child
+  {
+    background:none;
+    padding:0;
+    margin:0;
+  }
+
+  .menu 
+  {
+    color:white;
+    text-decoration:none;
+  }
+ 
+  .menu:hover
+  {
+    color:#394147;
+  }
+
+  #hover
+  {
+  /*margin-left: 50%;*/
+    position: absolute;
+    margin-left: 20%;
+    width: 90px;
+    top: 32.5px;
+  }
+
+  #co
+  {
+    margin-left:46.5%;
+  }
+
+  #ins
+  {
+    width: 250px;
+    height: 250px;
+    padding-left: 25px;
+    border-radius: 25px;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #F26e27;
+    margin-left: 17%;
+    margin-top: 30px;
+    margin-bottom: 75px;
+  }
+
+  #inscription
+  {
+    margin-top: 20px;
+    margin-left:17.5%;
+    width: 30px;
+  }
+
+  h1
+  {
+    color: #F26e27;
+  }
+}
+
+
 
 /*menu footer*/
 #menu_footer {
