--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -338,3 +338,13 @@ display:inline;
   color: black;
   margin-left: 10%;
 }*/
+#bouton{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 100px;
+height: 30px;
+font-size: 10px;
+}
