--- a/reunification/css/styleev(1).css
+++ b/reunification/css/styleev(1).css
@@ -7,11 +7,14 @@ background-color:#394147;
 font-family: Gotham Rounded;
 }
 
+body{
+background-color: #394147;
+}
 /*Largeur de la fenetre*/
 @media only screen and (max-width:800px) {
  body {
- 	 font-size:90%;
- background-color:white;
+ 	 font-size:80%;
+ background-color:#394147;
  color:black;
  }
   label
@@ -27,7 +30,7 @@ font-family: Gotham Rounded;
 @media only screen and (max-device-width:480px) {
  body {
  font-size:150%;
- background-color:white;
+ background-color:#394147;
  color:black;
  }
   label
@@ -51,7 +54,7 @@ label
 /*Menu*/
 header{
 background: #28282e;
-height:280px;
+height:240px;
 width: 100%;
 top:50%;
 }
@@ -222,14 +225,14 @@ margin-right:40px;
       padding-right: 2%;
       padding-left: 1%;*/
     background-color: #28282e;
-    padding-bottom: 75%;
+    padding-bottom: 90%;
     float:left;
     padding-left: 1%;
     border-style: solid;
     border-color: #28282e;
     border-width: 1px;
     padding-right: 1%;
-    margin-top: 1%;
+    margin-top: 30px;
     margin-left: 1%;
     border-radius: 15px;
 }
@@ -246,15 +249,12 @@ margin-right:40px;
 	  margin-left: 1%;
     border-radius: 10px;*/
       background-color: white;
-    padding-bottom: 0.05%;
-    float:left;
-    padding-left: 1%;
     border-style: solid;
     border-color: #28282e;
     border-width: 1px;
-    padding-right: 1000px;
-    margin-top: 1%;
-    margin-left: 1%;
+    padding-right: 10px;
+    margin-top: 30px;
+    margin-left: 420px;
     border-radius: 15px;
 
 }
@@ -273,12 +273,13 @@ display:inline;
 }
 
 .txt2,.txt3,.txt4,.txt5 {
-      display: inline;
-   /*   padding-right: 1px;
-      padding-left: 10px;
-     /*float: right;*/
-    /*  margin-top: -55%;*/
+ display: inline;
+
+   /*padding-right: 1px;
+   padding-left: 10px;*/
+  
 }
+
 /*
 .image3	{
       display: inline;
@@ -299,14 +300,14 @@ display:inline;
 }
 
 #lieu_date1,#lieu_date2,#lieu_date3,#lieu_date4 {
-  font-size: 12px;
+  font-size: 11px;
   color: black;
  /* margin-left: 25px;*/
 
 }
 
 #desc1,#desc2,#desc3,#desc4 {
-  font-size: 16px;
+  font-size: 13px;
   color: black;
  /* margin-left: 25px;*/
 
@@ -338,6 +339,7 @@ display:inline;
   color: black;
   margin-left: 10%;
 }*/
+
 #bouton{
 background-color: #F26e27;
 border-color: #F26e27;
@@ -348,89 +350,3 @@ width: 100px;
 height: 30px;
 font-size: 10px;
 }
-
-#more{
-margin-top: 90%;
-margin-left: -40%;
-background-color: #F26e27;
-border-color: #F26e27;
-border-width: 1px;
-border-radius: 10px;
-color:white;
-width: 190px;
-height: 35px;
-font-size: 10px;
-}
-
-a.info span{
-display: none;
-}
-
-a.info:hover {
-   background: none; /* Correction d'un bug d'Internet Explorer. */
-   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
-
-   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
-}
-
-a.info:hover span.mdr {
-   display: inline; /* On affiche l'infobulle. */
-   position: absolute;
-   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
-
-   top: 80%; /* On positionne notre infobulle. */
-   left: 44%;
-
-    background: #28282e;
-
-   color: white;
-   padding: 3px;
-
-  /* border-radius: 20px;*/
-}
-
-a.info:hover span.lol{
-   display: inline; /* On affiche l'infobulle. */
-   position: absolute;
-   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
-
-   top: 80%; /* On positionne notre infobulle. */
-   left: 35%;
-
-   background: #28282e;
-
-   color: white;
-   padding: 3px;
-
-   /*border-radius: 20px;*/
-}
-
-a.info:hover span.je{
-   display: inline; /* On affiche l'infobulle. */
-   position: absolute;
-   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
-
-   top: 80%; /* On positionne notre infobulle. */
-   left: 53%;
-
-   background: #28282e;
-
-   color: white;
-   padding: 3px;
-
-  /* border-radius: 20px;*/
-}
-
-a.info:hover span.sais{
-   display: inline; /* On affiche l'infobulle. */
-   position: absolute;
-   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
-
-   top: 80%; /* On positionne notre infobulle. */
-   left: 60%;
-
-   background: #28282e;
-
-   color: white;
-   padding: 3px;
- }
