--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -3,7 +3,7 @@ margin:0;
 padding:0;
 font-size:100%;
 color:black;
-background-color:#394147;
+background-color: white;
 font-family: Gotham Rounded;
 }
 
@@ -226,15 +226,15 @@ margin-right:40px;
        border-color: black;
       padding-right: 2%;
       padding-left: 1%;*/
-    background-color: #28282e;
+    background-color: white;
     padding-bottom: 75%;
     float:left;
     padding-left: 1%;
     border-style: solid;
     border-color: #28282e;
-    border-width: 1px;
+    border-width: 4px;
     padding-right: 1%;
-    margin-top: 1%;
+    margin-top: 2%;
     margin-left: 1%;
     border-radius: 15px;
 }
@@ -255,18 +255,18 @@ margin-right:40px;
     float:left;
     padding-left: 1%;
     border-style: solid;
-    border-color: #28282e;
-    border-width: 1px;
+    border-color: #F26e27;
+    border-width: 4px;
     padding-right: 1000px;
-    margin-top: 1%;
+    margin-top: 2%;
     margin-left: 1%;
     border-radius: 15px;
 
 }
 
 .txt1 {
-      color: white;
-      font-size: 140%;
+      color: black;
+      font-size: 135%;
 }
 
 .image2,.image3,.image4,.image5 {
@@ -274,7 +274,7 @@ margin-right:40px;
 }
 
 .image1{
-display:inline;
+padding-top: 15px;
 }
 
 .txt2,.txt3,.txt4,.txt5 {
@@ -346,7 +346,18 @@ display:inline;
 #bouton{
 background-color: #F26e27;
 border-color: #F26e27;
-border-width: 1px;
+border-width: 0.5px;
+border-radius: 10px;
+color:white;
+width: 100px;
+height: 30px;
+font-size: 10px;
+}
+
+#Gbouton{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 0.5px;
 border-radius: 10px;
 color:white;
 width: 100px;
