--- a/reunification/css/styleconex.css
+++ b/reunification/css/styleconex.css
@@ -405,3 +405,868 @@ height: 30px;
 #connexionForm input{
 border-color: #28282e;
 }
+
+@media only screen and (max-width:1300px){
+  html, body {
+margin:0;
+padding:0;
+font-size:100%;
+color:black;
+background-color:white;
+font-family: Gotham Rounded;
+}
+
+label
+{
+  margin:0;
+  display: block;
+  width: 180px;
+  float: left;
+
+}
+
+/*Menu*/
+header{
+background: #28282e;
+height:240px;
+width: 100%;
+}
+
+#menu_header {
+font-family: Gotham Rounded;
+text-align: center;
+position:absolute;
+top:190px;
+font-size:15px;
+color:white;
+text-transform:uppercase;
+padding:auto;
+width:100%;
+background:#F26e27;
+
+}
+ 
+#head {
+padding:5px;
+border-radius:4px;
+ 11111111
+}
+ 
+.h {
+display:inline;
+padding:0 14px 0 0;
+margin:0 14px 0 0;
+}
+ 
+.h:last-child {
+background:none;
+padding:0;
+margin:0;
+}
+
+.menu {
+color:white;
+text-decoration:none;
+}
+ 
+.menu:hover{
+color:#394147;
+}
+
+#hover
+{
+    text-align: center;
+  /*margin-left: 50%;*/
+    position: absolute;
+    margin-left: 39%;
+    margin-right: auto;
+    width: 10em;
+    margin-top: 3em;
+}
+
+#co
+{
+  margin-right: 7%;
+  margin-left: 93%;
+}
+
+#ins
+{
+width:500px;
+height:500px;
+float: left;
+padding-left: 3em;
+border-radius: 50px;
+border-style: solid;
+border-width: 3px;
+border-color: #F26e27;
+margin-left: 22.5em;
+margin-right: auto;
+margin-top: 60px;
+margin-bottom: 150px;
+}
+
+#inscription
+{
+margin-top: 2em;
+/*width: 60em;*/
+width: 4em;
+}
+
+h1
+{
+color: #F26e27;
+}
+
+/*menu footer*/
+#menu_footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    height: 10%;
+    width: 100%;
+}
+
+#menu_footer:hover {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    width: 100%;
+    height: 22%;
+}
+
+.bloc_footer {
+    width: 100%;
+}
+
+.bloc_footer ul {
+    text-align: left;
+}
+
+.bloc_footer ul li {
+    display: inline-block;
+    width: 18%;
+}
+
+.bloc_footer ul li a {
+    color: black;
+    font-size: 110%;
+}
+
+
+.img1 {
+    margin-left: 3%;
+    width: 50px;
+    height: 50px;
+    margin-top: 2%;
+}
+
+#greatplace {
+      float: right;
+      margin-right: 6%;
+      width: 200px;
+      margin-top: 0%;
+}
+
+/*Fleche vers le haut pour remarquer le footer*/
+.img2 {
+      display: block;
+      margin-left: 46%;
+      margin-bottom: 3%;
+      width: 4%;
+      height: 4%;
+}
+
+#logo{
+margin-left: 4%;
+}
+
+#acc{
+margin-right:40px;
+}
+
+#pro{
+margin-right:40px;
+}
+
+#fun{
+margin-right:40px;
+}
+
+a.info span{
+display: none;
+}
+
+a.info:hover {
+   background: none; /* Correction d'un bug d'Internet Explorer. */
+   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
+
+   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
+}
+
+a.info:hover span.mdr {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 40.5%;
+
+    background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.lol{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 33%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+   /*border-radius: 20px;*/
+}
+
+a.info:hover span.je{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 52.8%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.sais{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 61.5%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+ }
+
+.bouton{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 110px;
+height: 30px;
+font-size: 13px;
+}
+   /*border-radius: 20px;*/
+#bouton3{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 110px;
+height: 30px;
+}
+
+#connexionForm input{
+border-color: #28282e;
+}
+}
+
+
+@media only screen and (max-width:800px){
+  html, body {
+margin:0;
+padding:0;
+font-size:100%;
+color:black;
+background-color:white;
+font-family: Gotham Rounded;
+}
+
+label
+{
+  margin:0;
+  display: block;
+  width: 180px;
+  float: left;
+
+}
+
+/*Menu*/
+header{
+background: #28282e;
+height:240px;
+width: 100%;
+}
+
+#menu_header {
+font-family: Gotham Rounded;
+text-align: center;
+position:absolute;
+top:190px;
+font-size:15px;
+color:white;
+text-transform:uppercase;
+padding:auto;
+width:100%;
+background:#F26e27;
+
+}
+ 
+#head {
+padding:5px;
+border-radius:4px;
+ 11111111
+}
+ 
+.h {
+display:inline;
+padding:0 14px 0 0;
+margin:0 14px 0 0;
+}
+ 
+.h:last-child {
+background:none;
+padding:0;
+margin:0;
+}
+
+.menu {
+color:white;
+text-decoration:none;
+}
+ 
+.menu:hover{
+color:#394147;
+}
+
+#hover
+{
+    text-align: center;
+  /*margin-left: 50%;*/
+    position: absolute;
+    margin-left: 38%;
+    margin-right: auto;
+    width: 10em;
+    margin-top: 3em;
+}
+
+#co
+{
+  margin-right: 7%;
+  margin-left: 93%;
+}
+
+#ins
+{
+width:500px;
+height:500px;
+float: left;
+padding-left: 3em;
+border-radius: 50px;
+border-style: solid;
+border-width: 3px;
+border-color: #F26e27;
+margin-left: 6em;
+margin-right: auto;
+margin-top: 60px;
+margin-bottom: 150px;
+}
+
+#inscription
+{
+margin-top: 2em;
+margin-left: 12em;
+/*width: 60em;*/
+width: 4em;
+}
+
+h1
+{
+color: #F26e27;
+}
+
+/*menu footer*/
+#menu_footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    height: 10%;
+    width: 100%;
+}
+
+#menu_footer:hover {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    background-color: #28282e;
+    width: 100%;
+    height: 22%;
+}
+
+.bloc_footer {
+    width: 100%;
+}
+
+.bloc_footer ul {
+    text-align: left;
+}
+
+.bloc_footer ul li {
+    display: inline-block;
+    width: 18%;
+}
+
+.bloc_footer ul li a {
+    color: black;
+    font-size: 110%;
+}
+
+
+.img1 {
+    margin-left: 3%;
+    width: 50px;
+    height: 50px;
+    margin-top: 2%;
+}
+
+#greatplace {
+      float: right;
+      margin-right: 6%;
+      width: 200px;
+      margin-top: 0%;
+}
+
+/*Fleche vers le haut pour remarquer le footer*/
+.img2 {
+      display: block;
+      margin-left: 45%;
+      margin-bottom: 3%;
+      width: 8%;
+      height: 8%;
+}
+
+#logo{
+margin-left: 4%;
+}
+
+#acc{
+margin-right:40px;
+}
+
+#pro{
+margin-right:40px;
+}
+
+#fun{
+margin-right:40px;
+}
+
+a.info span{
+display: none;
+}
+
+a.info:hover {
+   background: none; /* Correction d'un bug d'Internet Explorer. */
+   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
+
+   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
+}
+
+a.info:hover span.mdr {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 33%;
+
+    background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.lol{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 19.5%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+   /*border-radius: 20px;*/
+}
+
+a.info:hover span.je{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 55.1%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+
+  /* border-radius: 20px;*/
+}
+
+a.info:hover span.sais{
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+
+   top: 80%; /* On positionne notre infobulle. */
+   left: 70.5%;
+
+   background: #28282e;
+
+   color: white;
+   padding: 3px;
+ }
+
+.bouton{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 110px;
+height: 30px;
+font-size: 13px;
+}
+   /*border-radius: 20px;*/
+#bouton3{
+background-color: #F26e27;
+border-color: #F26e27;
+border-width: 1px;
+border-radius: 10px;
+color:white;
+width: 110px;
+height: 30px;
+}
+
+#connexionForm input{
+border-color: #28282e;
+}
+}
+
+
+@media only screen and (max-device-width:640px){
+  
+  html, body {
+    margin:0;
+    padding:0;
+    font-size:50%;
+    color:black;
+    background-color:white;
+    font-family: Gotham Rounded;
+    /*overflow: hidden;*/
+  }
+
+  label
+  {
+    margin:0;
+    display: block;
+    width: 90px;
+    float: left;
+    margin-left: 5%;
+    padding-right: 0%;
+  }
+
+  /*Menu*/
+  header
+  {
+    background: #28282e;
+    height:120px;
+    width: 100%;
+  }
+
+  #menu_header 
+  {
+    font-family: Gotham Rounded;
+    text-align: center;
+    position:absolute;
+    top:95px;
+    font-size:7.5px;
+    color:white;
+    text-transform:uppercase;
+    padding:auto;
+    width:100%;
+    background:#F26e27;
+  }
+ 
+  #head
+  {
+    padding:2.5px;
+    border-radius:2px;
+  }
+ 
+  .h
+  {
+    display:inline;
+    padding:0 7px 0 0;
+    margin:0 7px 0 0;
+  }
+
+  .h:last-child
+  {
+    background:none;
+    padding:0;
+    margin:0;
+  }
+
+  .menu 
+  {
+    color:white;
+    text-decoration:none;
+  }
+ 
+  .menu:hover
+  {
+    color:#394147;
+  }
+
+  #hover
+  {
+    position: absolute;
+    margin-left: 35%;
+    margin-top: 5%;
+    width: 70px;
+    top: 32.5px;
+  }
+
+  #co
+  {
+    margin-left:75%;
+  }
+
+  #ins
+  {
+    width: 250px;
+    height: 250px;
+    padding-left: 1px;
+    border-radius: 25px;
+    border-style: solid;
+    border-width: 1.5px;
+    border-color: #F26e27;
+    margin-left: 10%;
+    margin-top: 28%;
+    margin-bottom: 75px;
+  }
+
+  #inscription
+  {
+    margin-top: 10px;
+    margin-left:45%;
+    width: 30px;
+  }
+
+  h1
+  {
+    color: #F26e27;
+    font-size: 300%;
+    margin-left: 5px;
+  }
+  
+  i
+  {
+    margin-left: 5px;
+  }
+
+  .img1
+  {
+    display: inline;
+    margin-left: 4%;
+    width: 25px;
+    height: 25px;
+    margin-top: 4%;
+  }
+
+  #greatplace
+  {
+    display: inline;
+    float: right;
+    margin-left: 0%;
+    margin-top: 3%;
+    /*margin-left: 60%;*/
+    width: 80px;
+  }
+
+  .bloc_footer ul
+  {
+    margin-left: 0%;
+    padding-left: 0%;
+  }
+
+  /*Fleche vers le haut pour remarquer le footer*/
+  .img2
+  {
+      display: block;
+      margin-left: 44%;
+      margin-bottom: 10%;
+      width: 15%;
+     /* height: 10%; */
+  }
+
+  #acc
+  {
+    margin-left: 10px;
+    margin-right: 13px;
+    width: 45px;
+  }
+
+  #cont
+  {
+    margin-right:13px;
+    width: 45px;
+  }
+
+  #pro
+  {
+    margin-right:13px;
+    width: 45px;
+  }
+
+  #fun
+  {
+    margin-right:13px;
+    width: 45px;
+  }
+
+  a.info span
+  {
+    display: none;
+  }
+
+  a.info:hover
+  {
+   background: none; /* Correction d'un bug d'Internet Explorer. */
+   z-index: 500; /* On définit une valeur pour l'ordre d'affichage. */
+   cursor: help; /* On change le curseur par défaut par un curseur d'aide. */
+  }
+
+  a.info:hover span.mdr
+  {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+   top: 10%; /* On positionne notre infobulle. */
+   left: 26.5%;
+   background: #28282e;
+   color: white;
+   padding: 3px;
+  /* border-radius: 20px;*/
+  }
+
+  a.info:hover span.lol
+  {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+   top: 10%; /* On positionne notre infobulle. */
+   left: 6.5%;
+   background: #28282e;
+   color: white;
+   padding: 3px;
+   /*border-radius: 20px;*/
+  }
+
+  a.info:hover span.je
+  {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+   top: 10%; /* On positionne notre infobulle. */
+   left: 57.2%;
+   background: #28282e;
+   color: white;
+   padding: 3px;
+  /* border-radius: 20px;*/
+  }
+
+  a.info:hover span.sais
+  {
+   display: inline; /* On affiche l'infobulle. */
+   position: absolute;
+   white-space: nowrap; /* On change la valeur de la propriété white-space pour qu'il n'y ait pas de retour à la ligne non désiré. */
+   top: 10%; /* On positionne notre infobulle. */
+   left: 80%;
+   background: #28282e;
+   color: white;
+   padding: 3px;
+  }
+
+  .bouton
+  {
+    background-color: #F26e27;
+    border-color: #F26e27;
+    border-width: 1px;
+    border-radius: 10px;
+    margin-left: 2%;
+    color:white;
+    width: 90px;
+    height: 20px;
+    font-size: 8px;
+  }
+
+   /*border-radius: 20px;*/
+  #bouton3
+  {
+    background-color: #F26e27;
+    border-color: #F26e27;
+    border-width: 1px;
+    border-radius: 10px;
+    color:white;
+    width: 110px;
+    height: 30px;
+  }
+
+  #txtok
+  {
+    padding-top: 0%;
+    margin-top: 0%;
+    padding-bottom: 0%;
+    margin-bottom: 0%;
+    margin-left: 2%;
+  }
+
+  #connexionForm input
+  {
+    border-color: #28282e;
+    margin-right: 10px;
+  }
+}
