--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -338,6 +338,7 @@ background-color: #F26e27;
 border-color: #F26e27;
 border-width: 0.5px;
 border-radius: 10px;
+margin-right: 10px;
 color:white;
 width: 100px;
 height: 30px;
