--- a/reunification/css/styleevenpro.css
+++ b/reunification/css/styleevenpro.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Ma Super Fonte";
+    src: url('MaSuperFonte-Regular.ttf');
+}
+
 html, body {
 margin:0;
 padding:0;
