--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -249,10 +249,24 @@ margin-right:40px;
     border-width: 4px;
     padding-right: 20px;
     margin-right: 20px;
-    margin-top: 5%;
+    margin-bottom: 2%;
     margin-left: 420px;
     border-radius: 15px;
 
+}
+
+.case_pouet {
+    text-decoration: none;
+    background-color: white;
+    padding-bottom: 0.05%;
+    border-style: solid;
+    border-color: #F26e27;
+    border-width: 4px;
+    padding-right: 20px;
+    margin-right: 20px;
+    margin-top: 5%;
+    margin-left: 420px;
+    border-radius: 15px;
 }
 
 .txt1 {
