--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -265,6 +265,7 @@ margin-right:40px;
     padding-right: 20px;
     margin-right: 20px;
     margin-top: 5%;
+    margin-bottom: 2%;
     margin-left: 420px;
     border-radius: 15px;
 }
