--- a/reunification/css/styleev.css
+++ b/reunification/css/styleev.css
@@ -186,7 +186,8 @@ color: #F26e27;
 }
 
 #greatplace {
-  margin-top: -20px;
+  margin-bottom: 40px;
+  margin-top: -190px;
       margin-left: 80%;
           width: 180px;
 }
