--- a/reunification/css/style2.css
+++ b/reunification/css/style2.css
@@ -782,4 +782,6 @@ padding-left: 50px;
    height: 200px;
 }
 
-}ᴝℝ℡∢⌢⌣␤┤┥☦✦✧⠨⨨⨪⬫ⰫⰬ⸮⼮⼯ㄱ㈱㈲偐❐∨⠧✢∨⠧✢∨⠧✢∨⠧
+#porc{
+text-decoration: none;
+}
