--- a/reunification/css/styleeven.css
+++ b/reunification/css/styleeven.css
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: "gotham";
+    src: url('../police/gotham.otf') format('truetype');
+}
+
 html, body {
 margin:0;
 padding:0;
 font-size:100%;
 color:black;
 background-color:white;
-font-family: Gotham Rounded;
+font-family: "gotham";
 }
 
 /*Largeur de la fenetre*/
