--- a/reunification/css/styleev(1).css
+++ b/reunification/css/styleev(1).css
@@ -1,10 +1,6 @@
-html, body {
-margin:0;
-padding:0;
-font-size:100%;
-color:black;
-background-color:#394147;
-font-family: Gotham Rounded;
+@font-face {
+    font-family: "gotham";
+    src: url('../police/gotham.otf') format('truetype');
 }
 
 body{
