--- a/reunification/css/style.css
+++ b/reunification/css/style.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: "gotham";
-    src: url('../police/gotham.otf') format('truetype');
-}
 
 html, body {
 margin:0;
@@ -9,7 +5,7 @@ padding:0;
 font-size:100%;
 color:black;
 background:white;
-font-family: "gotham";
+font-family: Gotham Rounded;
 }
 
 body {
@@ -83,19 +79,19 @@ width:100%;
 background:#F26e27;
 
 }
- 
+
 nav ul{
 padding:20px;
 border-radius:4px;
- 
+
 }
- 
+
 nav ul li{
 display:inline;
 padding:0 14px 0 0;
 margin:0 14px 0 0;
 }
- 
+
 nav ul li:last-child {
 background:none;
 padding:0;
@@ -106,7 +102,7 @@ nav a{
 color:white;
 text-decoration:none;
 }
- 
+
 nav a:hover{
 color:#394147;
 }
